--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>TKE Elevator</title>
@@ -16,51 +17,59 @@
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="/static/css/simulation.css" media="all" rel="stylesheet" type="text/css"/>
-    <link th:href="@{../static/css/simulation.css}" media="all" rel="stylesheet" type="text/css"/>
 <!--    <script src="/static/js/AlertError.js" type="text/javascript"></script>-->
+
+    <script src="/static/js/ElevatorNavigator.js"></script>
+
     <script src="/static/js/simulation/utils.js"></script>
 
     <script src="/static/js/simulation/config.js"></script>
     <script src="/static/js/simulation/building_display.js"></script>
     <script src="/static/js/simulation/elevator-system.js"></script>
     <script src="/static/js/simulation/binding.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 <!--    <script src="js/utils.js"></script>-->
 <!--    <script src="js/config.js"></script>-->
 <!--    <script src="js/building_display.js"></script>-->
 <!--    <script src="js/elevator-system.js"></script>-->
 <!--    <script src="js/binding.js"></script>-->
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js}" type="text/javascript"></script>
 </head>
 <body>
-<div class=" head-info ">
-    <div class="building-info">
-        <p>Number of floors：<span id="floor_nums_info">10</span>&nbsp;<button class="btn btn-primary .btn-xs change_building-button"
-                                                                              id="change-floor-nums"
-                                                                              type="button">
-            Change
-        </button>&nbsp; Number of elevator：<span id="elevator_nums_info">3</span>
-            <button class="btn btn-primary .btn-xs change_building-button" id="change-elevator_nums"
-                    type="button">更改
-            </button>
+<div th:text="${numFloors}" id="numFloors" hidden></div>
+<div th:text="${numElevators}" id="numElevators" hidden></div>
+<!--<div th:replace="fragments/header :: header"></div>-->
+<div class="container-a">
+<!--<div class="head-info">-->
+<!--    <div class="building-info">-->
+<!--        <p>Number of floors：<span id="floor_nums_info">10</span>&nbsp;<button class="btn btn-primary .btn-xs change_building-button"-->
+<!--                                                                              id="change-floor-nums"-->
+<!--                                                                              type="button">-->
+<!--            Change-->
+<!--        </button>&nbsp; Number of elevator：<span id="elevator_nums_info">3</span>-->
+<!--            <button class="btn btn-primary .btn-xs change_building-button" id="change-elevator_nums"-->
+<!--                    type="button">Change-->
+<!--            </button>-->
 
-        </p>
-        <div>
-            <div> Change the elevator position (effective when all elevators are stationary)</div>
-            <button class="btn btn-info .btn-xs change_building-button half-one-half-distribution"
-                    type="button">Half of the elevators are on the first floor and half are scattered around
-            </button>
-            <button class="btn btn-info .btn-xs change_building-button all-one"
-                    type="button">All elevators are on the first floor
-            </button>
-        </div>
-        <div>
-            <div>Smart mode: All elevators automatically analyze the system status when idle and move to floors lacking elevators</div>
-            <button class="btn btn-info .btn-xs enable-ai-mode-button"
-                    type="button">Activate smart mode
-            </button>
-        </div>
-    </div>
-</div>
+<!--        </p>-->
+<!--        <div>-->
+<!--            <div> Change the elevator position (effective when all elevators are stationary)</div>-->
+<!--            <button class="btn btn-info .btn-xs change_building-button half-one-half-distribution"-->
+<!--                    type="button">Half of the elevators are on the first floor and half are scattered around-->
+<!--            </button>-->
+<!--            <button class="btn btn-info .btn-xs change_building-button all-one"-->
+<!--                    type="button">All elevators are on the first floor-->
+<!--            </button>-->
+<!--        </div>-->
+<!--        <div>-->
+<!--            <div>Smart mode: All elevators automatically analyze the system status when idle and move to floors lacking elevators</div>-->
+<!--            <button class="btn btn-info .btn-xs enable-ai-mode-button"-->
+<!--                    type="button">Activate smart mode-->
+<!--            </button>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="g-content" id="g-building">
     <div class="g-take-place"></div>
     <div class="g-container"></div>
@@ -72,7 +81,9 @@
     <div id="g-panel-body"></div>
     <div class="g-take-place"></div>
 </div>
+</div>
 </body>
+</html>
 <style>
     body {
         font-family: Arial, Helvetica, sans-serif;
@@ -83,8 +94,12 @@
         right: 0;
         bottom: 0;
         top: 0;
+        /*background-image: url("/images/simulation/wall");*/
+        background-color: black;
     }
-
+/*html{*/
+/*    transform: scale(0.75);*/
+/*}*/
     div.grid-container {
         display: grid;
         background-color: #FFAA00;
@@ -236,6 +251,17 @@
         local('UnidreamLED'), url("../lib/UnidreamLED/UnidreamLED.woff");
     }
 
+    /*.choose-floor-prompt {*/
+    /*    width: 40px;*/
+    /*    position: relative;*/
+    /*    display: inline-block;*/
+    /*    left: -8%;*/
+    /*    font-size: 30px;*/
+    /*    bottom: 24%;*/
+    /*    color: #1c1c1c;*/
+    /*    text-align: center;*/
+    /*    transform: translate(25%, 0%);*/
+    /*}*/
     .choose-floor-prompt {
         width: 40px;
         position: relative;
@@ -247,6 +273,8 @@
         text-align: center;
         transform: translate(25%, 0%);
     }
+
+
 
     .choose-floor-promp .a {
         writing-mode: unset;
@@ -561,6 +589,7 @@
         font-weight: bolder;
         display: inline-block;
         text-align: center;
+        background-color: white;
     }
 
     .take-place-hidden {
