--- a/src/main/resources/templates/building/all.html
+++ b/src/main/resources/templates/building/all.html
@@ -51,9 +51,12 @@
 
                 <!-- Action Buttons for Admin or Manager roles -->
                 <div th:if="${role == 'ADMIN' || role == 'MANAGER'}" class="mt-3">
-                    <div class="float-right">
-                        <a class="btn btn-success" th:href="@{/building/{buildingId}/add-area(buildingId=${building.id})}">Add Area</a>
-                        <a class="btn btn-primary" th:href="@{/building/{buildingId}/edit(buildingId=${building.id})}">Update Building</a>
+                    <div class="float-right d-flex">
+                        <a class="btn btn-success mr-2" th:href="@{/building/{buildingId}/add-area(buildingId=${building.id})}">Add Area</a>
+                        <a class="btn btn-primary mr-2" th:href="@{/building/{buildingId}/edit(buildingId=${building.id})}">Update Building</a>
+                        <form method="POST" th:action="@{/building/{id}/delete(id=${building.id})}" onsubmit="return confirmDelete(event)">
+                            <button class="btn btn-danger mr-2" type="submit" name="areaId" th:value="${building.id}">Delete Building</button>
+                        </form>
                     </div>
                 </div>
             </div>
