--- a/src/main/resources/templates/building/all.html
+++ b/src/main/resources/templates/building/all.html
@@ -7,6 +7,11 @@
     <script th:src="@{../static/js/DeleteConfirmation.js}" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bao gồm tệp Popper.js -->
+    <script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
