--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -22,6 +22,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/static/js/AlertError.js" type="text/javascript"></script>
+    <script src="/static/js/GenerateHeader.js" type="text/javascript"></script>
     <style>
         #elevator-panel {
             max-width: 80vw;
