--- a/src/main/resources/templates/user/users.html
+++ b/src/main/resources/templates/user/users.html
@@ -8,6 +8,10 @@
     <script th:src="@{../static/js/DeleteConfirmation.js}" type="text/javascript"></script>
     <script th:src="@{../static/js/ResetPassword.js}" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -50,11 +54,11 @@
 
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<!--        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>-->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>-->
 </body>
 </html>
